--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Extension specific files
+*.vsix
+.DS_Store
+
 # Logs
 logs
 *.log
@@ -137,3 +141,6 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Claude AI local settings
+.claude
