--- a/.github/workflows/vsix-package.yaml
+++ b/.github/workflows/vsix-package.yaml
@@ -16,15 +16,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout Extension
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ">=22.0.0"
+          node-version: "22"
       - name: Install Extension Dependencies
-        run: npm install
+        run: npm ci
       - name: Build Extension
-        run: npm run build
+        run: npm run esbuild
       - name: Publish Extension
         if: success() && startsWith(github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
         run: npm run deploy
