Add iflow.cn integration with model-specific capabilities and vision support
- Update default server URL to https://apis.iflow.cn/v1
- Add model-specific token limits and capabilities (vision support for Qwen3-VL-Plus, GLM-4.6)
- Change display name from 'LLM Gateway' to 'iflow'
- Update README with iflow.cn setup instructions
- Fix TypeScript compilation issues

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "languageModelChatProviders": [
       {
         "vendor": "copilot-llm-gateway",
-        "displayName": "LLM Gateway"
+        "displayName": "iflow"
       }
     ],
     "commands": [
@@ -62,8 +62,8 @@
       "properties": {
         "github.copilot.llm-gateway.serverUrl": {
           "type": "string",
-          "default": "http://localhost:8000",
-          "description": "Inference server URL (OpenAI API compatible endpoint)",
+          "default": "https://apis.iflow.cn/v1",
+          "description": "Inference server URL (OpenAI API compatible endpoint). For iflow.cn, use https://apis.iflow.cn/v1",
           "order": 1
         },
         "github.copilot.llm-gateway.apiKey": {
