--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
       "properties": {
         "github.copilot.llm-gateway.serverUrl": {
           "type": "string",
-          "default": "https://apis.iflow.cn/v1",
+          "default": "https://apis.iflow.cn",
           "description": "Inference server URL (OpenAI API compatible endpoint). For iflow.cn, use https://apis.iflow.cn/v1",
           "order": 1
         },
@@ -80,13 +80,13 @@
         },
         "github.copilot.llm-gateway.defaultMaxTokens": {
           "type": "number",
-          "default": 32768,
+          "default": 131072,
           "description": "Default maximum input tokens for models (context window)",
           "order": 4
         },
         "github.copilot.llm-gateway.defaultMaxOutputTokens": {
           "type": "number",
-          "default": 4096,
+          "default": 32768,
           "description": "Default maximum output tokens for models",
           "order": 5
         },
@@ -104,7 +104,7 @@
         },
         "github.copilot.llm-gateway.agentTemperature": {
           "type": "number",
-          "default": 0.0,
+          "default": 0.3,
           "minimum": 0.0,
           "maximum": 2.0,
           "description": "Temperature for agent/tool calling mode (lower = more consistent tool call formatting). Set to 0.0 for best results with fine-tuned models.",
